k3s/apps/docmost/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: docmost
  namespace: tools
  labels:
    app: docmost
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: docmost
