k3s/apps/docmost/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docmost
  namespace: tools
  labels:
    app: docmost
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  tls:
    - hosts:
        - wiki.home.lan
      secretName: docmost-tls-secret
  rules:
    - host: wiki.home.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docmost
                port:
                  number: 3000
